@@ -28,6 +28,12 @@ It is accessed via the
 .Pa filters
 menu item.
 .Pp
+Each filter has an optional
+.Ar name
+and
+.Ar notes
+for user defined purposes.
+.Pp
 The following match types are possible.
 All nonempty criteria must match.
 .Bl -tag -width include-audience
