@@ -43,15 +43,18 @@ The
 field is required.
 Either of two forms are accepted, the user's handle (or webfinger) or their
 ActivityPub actor URL.
-The
-.Ar name
-field is optional and will be automatically inferred.
-Examples:
+.Pp
 .Dl @user@example.social
 .Dl https://example.social/users/user
 .Pp
+The
+.Ar name
+field is optional and will be automatically inferred.
+The
+.Ar notes
+field is reserved for user remarks.
 Fellow honkers may be added to one or more
-.Ic combos
+.Ar combos
 to suit one's organizational preferences.
 These are accessed via the
 .Pa combos
