@@ -179,6 +179,11 @@ type Honker struct {
 	Handle string
 	Flavor string
 	Combos []string
+	Meta HonkerMeta
+}
+
+type HonkerMeta struct {
+	Notes string
 }
 
 type SomeThing struct {
